--- a/templates/base.html
+++ b/templates/base.html
@@ -32,8 +32,8 @@
     {% endblock %}
   </main>
 
-  <!-- オーバーレイ（右からスライド用） -->
-  <div id="overlay"></div>
+  <div id="right-menu" class="right"></div>
+  <div id="left-menu" class="left"></div>
 
     <footer class="footer">
       <nav class="footer-nav">
