--- a/home/templates/home/includes/horizontal_item_slider.html
+++ b/home/templates/home/includes/horizontal_item_slider.html
@@ -10,10 +10,12 @@
         {% for item in items %}
         <div class="product-card">
             <a href="{% url 'items:detail' item.id %}">
-                {% if item.main_image %}
-                <img src="{{ item.main_image.url }}" alt="{{ item.name }}" class="product-image">
+                {% if item.images.all %}
+                    <div class="image-box" style="width: 100%; height: 200px; overflow: hidden; margin: 0 auto 10px;">
+                        <img src="{{ item.images.all.0.image.url }}" class="item-image">
+                    </div>
                 {% else %}
-                <div class="no-image-placeholder">No Image</div>
+                    <div style="width:100%; height:200px; background:#f0f0f0; display:flex; align-items:center; justify-content:center; border-radius:4px; margin-bottom: 10px;">No Image</div>
                 {% endif %}
                 
                 <div class="product-info">
